- JoyStick support - Mower status display - Minor fixes
